changes html to php

--- a/ui-elements/auth-404.html
+++ b/ui-elements/auth-404.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>:: I-Health:: 404 Page</title>
-    <link rel="icon" href="../favicon.ico" type="image/x-icon"> <!-- Favicon-->
+    <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Favicon-->
     <!-- project css file  -->
-    <link rel="stylesheet" href="../assets/css/ihealth.style.min.css">
+    <link rel="stylesheet" href="assets/css/ihealth.style.min.css">
 </head>
 
 <body>
@@ -66,7 +66,7 @@
 </div>
 
 <!-- Jquery Core Js -->
-<script src="../assets/bundles/libscripts.bundle.js"></script>
+<script src="assets/bundles/libscripts.bundle.js"></script>
 
 </body>
 
